# atleta-data-storage-parachain

./: Cargo.toml  README.md  rustfmt.toml  zombienet.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
